bump changes fire spread campfires